# discord-native-voice

./: .gitignore  .readthedocs.yml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-distributions.yml  ci.yml  publish.yml
discord/ext/native_voice/: __init__.py  _native_voice.pyi  _version.py  client.py  codecs.py  dave.py  media.py  player.py  rtp.py  stream_client.py  transcoding.py
docs/: api.rst  conf.py  index.rst  quickstart.rst  requirements.txt
docs/_stubs/: native_module.py
docs/extensions/: attributetable.py
src/: lib.rs
src/audio/: mod.rs  pcm.rs
src/capture/: mod.rs  windows.rs
src/python/: audio.rs  capture.rs  mod.rs  net.rs  transport.rs  video.rs  video_send.rs
src/rtp/: mod.rs
src/transport/: crypto.rs  mod.rs  udp.rs
src/video/: av1.rs  common.rs  h264.rs  h265.rs  h26x.rs  mod.rs  vp8.rs  vp9.rs
