[build-system]
requires = ["setuptools", "wheel", "setuptools-rust>=1.8"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-native-voice"
version = "0.1.0"
description = "Voice, video, and stream transport extension for discord.py-self"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Dolfies", email = "me@dolfi.es" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "https://discord-native-voice.readthedocs.io/en/latest/"
"Issue tracker" = "https://github.com/dolfies/discord.py-self/issues"

[project.optional-dependencies]
dev = [
    "ruff==0.12",
]

[tool.setuptools]
packages = ["discord.ext.native_voice"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"discord.ext.native_voice" = ["*.pyi", "py.typed"]

[[tool.setuptools-rust.ext-modules]]
target = "discord.ext.native_voice._native_voice"
debug = false

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "cp3??t-* pp*"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.android]
before-all = "rustup target add aarch64-linux-android x86_64-linux-android"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.12" }

[tool.cibuildwheel.windows]
before-all = "rustup target add i686-pc-windows-msvc aarch64-pc-windows-msvc"
test-skip = "*-win_arm64"

[tool.ruff]
line-length = 125

[tool.ruff.lint.per-file-ignores]
"tests/integration/_common.py" = ["E402"]

[tool.ruff.format]
line-ending = "auto"
quote-style = "single"

[tool.pyright]
include = [
    "discord/ext/native_voice",
]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "docs",
    "target",
    "tools",
]
extraPaths = [
    "../discord.py-self",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
reportShadowedImports = false
pythonVersion = "3.10"
typeCheckingMode = "basic"
